2007-02-02  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Move resource compiling code
	to ..
	(GetResourceId): .. here. Improve error messages.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs,
	  CSharpAmbience.cs: Code completion of overridable members. Yay!

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CodeGenerator.cs: Properly look for property references.

2007-01-31  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Properly resolve alias directives. Fixes bug
	  #80248.

2007-01-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/LanguageItemVisitor.cs: Properly resolve calls to local
	  instance methods.

2007-01-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CSharpVisitor.cs: When creating an enum, explicitely add the
	  System.Enum base class. Make enum files "const".
	* Parser/Resolver.cs: Removed some debug code. Show enum fields only
	  when resolving the type only. Fixes bug #80088.

2007-01-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Fix overloaded operator filter.

2007-01-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/CSharpVisitor.cs, Parser/TypeVisitor.cs: Implemented support
	  for overloaded operators.
	* Parser/Resolver.cs: Exclude operators from the resolve list.
	* Parser/LanguageItemVisitor.cs: When resolving overloads, try to find
	  the closes matching signature.
	* Parser/ExpressionFinder.cs, Parser/SharpDevelopTree/Method.cs: Fix
	  warnings.
	* CSharpAmbience.cs: Properly format method names for overloaded
	  operators.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/gui.stetic: Updated.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs, CSharpBindingCompilerManager.cs,
	  Project/CSharpCompilerParameters.cs: Implemented support for
	  CodePage and Win32Icon options.