@@ -1,3 +1,10 @@
+2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Gui/CSharpTextEditorExtension.cs: When typing '#', move it to the
+	  first column is there is no other text before. Implemented code
+	  completion for compiler directives. Don't show sealed methods in
+	  the overridable list.
+
 2007-02-02  Ankit Jain  <jankit@novell.com>
 
 	* CSharpBindingCompilerManager.cs (Compile): Move resource compiling code
